# causes-tracker

./: .bazelrc  .clippy.toml  .gitattributes  .gitignore  .pymarkdown.json  .shellcheckrc  .yamlfmt  .yamllint  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  docker-compose.yml  index.html  pyproject.toml  renovate.json  requirements.in  requirements_lock.txt  search.json  workspace_status.sh
.devcontainer/: BUILD.bazel  Dockerfile  README.md  build_test.sh  devcontainer.json  package.json  pnpm-lock.yaml
designdocs/tla/: BUILD.bazel  README.md  Replication.cfg  Replication.tla  ReplicationMC.tla  ReplicationTxn.cfg  ReplicationTxn.tla  ReplicationTxnDeep.cfg  ReplicationTxnDeepMC.tla  ReplicationTxnMC.tla  run_tlc.sh
docs/: BUILD.bazel  README.md  deploy_docs.sh  docs_test.sh  mkdocs.yml  serve_docs.sh  serve_test.sh  site_builder.bash
infra/: BUILD.bazel  README.md  aws.sh  deploy.sh  tofu.sh
infra/github/: README.md  labels.tf  main.tf  outputs.tf  rulesets.tf  variables.tf
infra/postgres/: BUILD.bazel  README.md  defs.bzl  psql.sh  psql_test.sh  testfixture.sh  testfixture_test.sh
infra/terraform/: .gitignore  README.md  aurora.tf  ec2.tf  outputs.tf  pgvector.tf  variables.tf
infra/tla/: BUILD.bazel  README.md  defs.bzl  run_tlc.sh
lib/rust/api_db/: BUILD.bazel  Cargo.toml  README.md  db_test.sh
lib/rust/api_db/.sqlx/: query-017da9e6897f8665f091a505fa3f5464ba77bc1602d8e18c1b32fb967e744fed.json  query-0709595b2ab7fcfaea09d2af7f42d154a9fd0b18fe9d6f367e9e9221d730d2ee.json  query-0713643a09251ce4cb493e1b3ac3deae15883e8f6dad25a39568f1a7f1c5508f.json  query-0bd14a82bab1e01bb2dabbbf6f3f7dba62e6783a336dd683678af919215e9573.json  query-0c1d8c3756045e6d524abcbead5af963115673464a4fd4642d254ff08111580c.json  query-0d70835781927858bcf3503ffd1fbe7c314a7d731fa6a0a57d008d5756a32b92.json  query-1e5ed270aa400b8fac00d8a3e9f9e11393bf40b82e8c9ce3965f19458c557bb1.json  query-221b105230b50879ba327907435e0ec5d5b8e69cad69db5a719065d5279e442d.json  query-2573ffa8d0d5608a1fb9177e2fb4ae756b5b75d8096dade42aa60d72e116886a.json  query-2650feac828739b29931cc7f792630ee0b2143fcea83bf3a304da0753c47896a.json  query-39de02122a9551aac310eac0339857002caf2ca27826b0af7a72d3d5f45da9b7.json  query-3b299f36c53534ee8aee0593405dc220b068ff9c4a33f9dd9b0b4b7135dbb73b.json  query-3df2f29cd023795b6515c845c7feb27785aaca783c1a95efc5cccd5e52e3b5ca.json  query-43b865410788be6ba9aa7d8f34b000d1d6e7da5d245fdcf4d512d42ec0346537.json  query-452bf09b0d38d421e10438bbb0e0b663016ac9533dfa5f15cf3e868bcccd9677.json  query-4560c237741ce9d4166aecd669770b3360a3ac71e649b293efb88d92c3254068.json  query-45ee51fb863f70b23bd4a530742c098b1c9f08f0ed638b882c344dc3ae5ebcf5.json  query-46c6abb4db8cb5a2cc1ebe998923e7db31fde9847f23653b9edb8ef18bf0f6e7.json  query-4c79f7ac49117b721beb349644f384e0d6566adfbe2fc1fc31915b347addea2f.json  query-4d16de4af8585dc4bbad904d65895cd7c66afc69ffabb36cfde1fcdffbfb24e2.json  query-5975e3e51d0c02b3f2f7aaf20a0c432d70a30ccabc6eb4b9b0bf30bcd1a40f49.json  query-5ec274a882caf4cd95ab49458cf727efddfd5d3c454d32cf9d2696ba5ba8c89d.json  query-60b7882be06ca38f5d794062ce46c809baab503d3ea6a9f91ee49fcde662fbe3.json  query-6183c1dd218728ecb491ed05d6501dcccfda792ea5da13ad25961f821d6cbb96.json  query-619ed48621c821d64de9c4ac6bf7518608b1cb828474d760df65add906d9b0f5.json  query-6a765f61e1120469ccaa87e4fcfc90e479dd59747373cab8f155833ac1683534.json  query-6b27958003e133e617c7e3884d84bf6fc608f0688b0e8fd79cb526599cf0aeff.json  query-74a86dfa021c1a5723e4775c3651e747db1735e6b555889a16e86ce6d1cb05c8.json  query-7b3e32cf3bdbca156dbe0e69e300722a63153876d17d02f6e7d39d12a1dc0f02.json  query-81acd694e9b6c8a0eb10d03e13f7e27e1d1fd813964139c5d0d71c70f53d1826.json  query-82b5dc33121b57704030e41c320268399aca33984a39b899c6d31083ac3ce60b.json  query-8b182a36cd2e9c8c6630090ce8fbd0f04fa8647ed48e5f581b1d53bdf8a64bf5.json  query-8b8bdf74f2ae5e5be7112699fc321afcd99116b636a058fc3cae2075b77b3d28.json  query-8e4d49f9bd9acba406f475b2c2d6184ecb9bbeac1d4e59b5083d6c51056672ab.json  (+24 more)
lib/rust/api_db_aws/: BUILD.bazel  Cargo.toml
lib/rust/api_db_macros/: BUILD.bazel  Cargo.toml  README.md
lib/rust/causes_mcp/: BUILD.bazel  Cargo.toml  README.md
lib/rust/causes_proto/: BUILD.bazel  Cargo.toml  README.md
lib/rust/causes_session/: BUILD.bazel  Cargo.toml  README.md
lib/rust/proto_ext/: BUILD.bazel  Cargo.toml  README.md
proto/: BUILD.bazel  README.md
proto/causes/v1/: admin_service.proto  annotation.proto  auth_service.proto  comment.proto  common.proto  identity.proto  link.proto  plan.proto  project.proto  project_service.proto  replication_example.proto  sign.proto  symptom.proto
services/causes_api/: BUILD.bazel  Cargo.toml  README.md  db_test.sh  env.example
services/causes_api/migrations/: 001_initial.sql
services/causes_api/src/: admin_service.rs  auth.rs  bff.rs  bootstrap.rs  config.rs  db.rs  google.rs  grpc.rs  interceptor.rs  main.rs  project.rs  store.rs  telemetry.rs  tls.rs
services/causes_api/static/: index.html
services/causes_cli/: BUILD.bazel  Cargo.toml  README.md
services/causes_cli/src/: admin.rs  auth.rs  main.rs  mcp.rs  project.rs  rpc.rs  session_file.rs
services/instance-api/: .env.example  Cargo.toml  README.md
services/instance-api/src/: config.rs  db.rs  main.rs  telemetry.rs
tla/: BUILD.bazel  README.md  Replication.tla  ReplicationDeepMC.tla  ReplicationMC.tla
tools/: BUILD.bazel  README.md  cargo.sh  coverage.sh  jj-merge-cargo-lock.sh  jj-merge-module-lock.sh  jj-repo-config.toml  proto_gen_impl.sh  require_readme_test.sh  rust_host_tools.bzl  rustc.sh  rustfmt.sh  show_coverage.py  sqlx.sh  sqlx_prepare.bzl  sqlx_prepare_impl.sh  toolchain_versions_test.sh
tools/lint/: BUILD.bazel  README.md  check_cargo_bazel_deps.py  format_check.bzl  linters.bzl  run_buildifier_check.sh  run_pymarkdown.sh  run_ruff_check.sh  run_ruff_format.sh  run_rustfmt_check.sh  run_shfmt_check.sh  run_taplo_check.sh  run_yamlfmt_check.sh  taplo.sh
tools/proto-gen/: BUILD.bazel  Cargo.toml  README.md
tools/proto-gen/src/: main.rs
tools/sqlx-cli/: Cargo.toml
tools/sqlx-cli/src/: main.rs
(+59 files in other folders)
