[workspace]
members = [
  "lib/rust/api_db",
  "lib/rust/causes_proto",
  "services/causes_api",
  "services/causes_cli",
  "tools/proto-gen",
  "tools/sqlx-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = [
  "transport",
  "tls-ring",
  "tls-native-roots",
] }
tonic-health = { version = "0.14" }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
reqwest = { version = "0.13", features = [
  "json",
  "rustls",
  "form",
  "query",
], default-features = false }
clap = { version = "4", features = ["env", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = [
  "http-proto",
  "reqwest-rustls",
] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
url = "2"
email_address = "0.2"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
rustls-acme = { version = "0.15", features = ["tokio"] }
futures = "0.3"
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
mockall = "0.14"
tempfile = "3"
wiremock = "0.6"
