module(
    name = "causes",
    version = "0.0.0",
)

# rules_go is required by Gazelle even before any Go code exists.
# It does not download a Go toolchain until a Go target is built.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

# Proto support.
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.1")

# Linting and formatting (proto via buf lint; extended to other languages as they land).
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")

# aspect_rules_lint transitively pulls in rules_android, which registers an Android SDK
# toolchain. rules_android <=0.6.4 references @local_config_platform (removed in Bazel 9);
# 0.7.1 fixes this by loading from @platforms//host instead.
bazel_dep(name = "rules_android", version = "0.7.1")

# protoc-gen-doc: generates reference documentation from proto files.
# Pre-built Linux amd64 binary; used in the docs_site genrule.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Pre-built PostgreSQL 17 binaries for Linux x86_64 (full install: server +
# client tools including psql, pg_isready, pg_dump, …).
# Source: theseus-rs/postgresql-binaries on GitHub.
# Update by checking https://github.com/theseus-rs/postgresql-binaries/releases
# and recomputing sha256 from the matching .sha256 file.
http_file(
    name = "postgresql_linux_amd64",
    url = "https://github.com/theseus-rs/postgresql-binaries/releases/download/17.9.0/postgresql-17.9.0-x86_64-unknown-linux-gnu.tar.gz",
    sha256 = "463422cb007fd15bb37819b1d3562392dd81bba385205fbd0eef4891cb1d18b5",
    downloaded_file_path = "postgresql.tar.gz",
)

http_archive(
    name = "protoc_gen_doc",
    url = "https://github.com/pseudomuto/protoc-gen-doc/releases/download/v1.5.1/protoc-gen-doc_1.5.1_linux_amd64.tar.gz",
    sha256 = "47cd72b07e6dab3408d686a65d37d3a6ab616da7d8b564b2bd2a2963a72b72fd",
    build_file_content = """exports_files(["protoc-gen-doc"])""",
)
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//.devcontainer:pnpm-lock.yaml",
    data = [
        "//.devcontainer:package.json",
        "//.devcontainer:pnpm-workspace.yaml",
    ],
)
use_repo(
    npm,
    "npm",
    "npm__at_devcontainers_cli__0.84.1",
)
