module(
    name = "causes",
    version = "0.0.0",
)

# rules_go is required by Gazelle even before any Go code exists.
# It does not download a Go toolchain until a Go target is built.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

# Proto support.
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.1")

# Linting and formatting (proto via buf lint; extended to other languages as they land).
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")

# aspect_rules_lint transitively pulls in rules_android, which registers an Android SDK
# toolchain. rules_android <=0.6.4 references @local_config_platform (removed in Bazel 9);
# 0.7.1 fixes this by loading from @platforms//host instead.
bazel_dep(name = "rules_android", version = "0.7.1")

# protoc-gen-doc: generates reference documentation from proto files.
# Pre-built Linux amd64 binary; used in the docs_site genrule.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Pre-built PostgreSQL 17 binaries for Linux x86_64 (full install: server +
# client tools including psql, pg_isready, pg_dump, …).
# Source: theseus-rs/postgresql-binaries on GitHub.
# Update by checking https://github.com/theseus-rs/postgresql-binaries/releases
# and recomputing sha256 from the matching .sha256 file.
http_file(
    name = "postgresql_linux_amd64",
    downloaded_file_path = "postgresql.tar.gz",
    sha256 = "463422cb007fd15bb37819b1d3562392dd81bba385205fbd0eef4891cb1d18b5",
    url = "https://github.com/theseus-rs/postgresql-binaries/releases/download/17.9.0/postgresql-17.9.0-x86_64-unknown-linux-gnu.tar.gz",
)

# AWS CLI 2.34.14 Linux amd64, used by //infra:aws.
# Update: download new zip, run sha256sum, update version and sha256 here.
# https://awscli.amazonaws.com/awscli-exe-linux-x86_64-VERSION.zip
http_archive(
    name = "aws_cli_linux_amd64",
    build_file_content = """
filegroup(
    name = "dist",
    srcs = glob(["dist/**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "05f820e8df6bdc2b1c296afd1b63d3fecd39ac0725fd823004f110191c8180dd",
    strip_prefix = "aws",
    url = "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.34.14.zip",
)

# OpenTofu 1.11.5 Linux amd64 binary, used by //infra:tofu.
# Update by downloading the new SHA256SUMS from the GitHub release page.
http_archive(
    name = "opentofu_linux_amd64",
    build_file_content = """exports_files(["tofu"])""",
    sha256 = "901121681e751574d739de5208cad059eddf9bd739b575745cf9e3c961b28a13",
    url = "https://github.com/opentofu/opentofu/releases/download/v1.11.5/tofu_1.11.5_linux_amd64.zip",
)

http_archive(
    name = "protoc_gen_doc",
    build_file_content = """exports_files(["protoc-gen-doc"])""",
    sha256 = "47cd72b07e6dab3408d686a65d37d3a6ab616da7d8b564b2bd2a2963a72b72fd",
    url = "https://github.com/pseudomuto/protoc-gen-doc/releases/download/v1.5.1/protoc-gen-doc_1.5.1_linux_amd64.tar.gz",
)
# ── Rust ──────────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_rs", version = "0.0.44")

toolchains = use_extension(
    "@rules_rs//rs/experimental/toolchains:module_extension.bzl",
    "toolchains",
)
toolchains.toolchain(
    edition = "2021",
    version = "1.87.0",
)
use_repo(
    toolchains,
    "cargo_linux_x86_64_1_87_0",
    "default_rust_toolchains",
    "rustc_linux_x86_64_1_87_0",
    "rustfmt_linux_x86_64_1_87_0",
)

register_toolchains("@default_rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    use_experimental_platforms = True,
)
use_repo(crate, "crates")

# ── Container images ───────────────────────────────────────────────────────────

bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian12",
    # Pin with: bazel run @rules_oci//oci:pin -- --image=gcr.io/distroless/cc-debian12
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "latest",
)
use_repo(oci, "distroless_cc_debian12", "distroless_cc_debian12_linux_amd64", "distroless_cc_debian12_linux_arm64")

# ── Python ────────────────────────────────────────────────────────────────────

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//.devcontainer:package.json",
        "//.devcontainer:pnpm-workspace.yaml",
    ],
    pnpm_lock = "//.devcontainer:pnpm-lock.yaml",
)
use_repo(
    npm,
    "npm",
    "npm__at_devcontainers_cli__0.84.1",
)
