module(
    name = "causes",
    version = "0.0.0",
)

# rules_go is required by Gazelle even before any Go code exists.
# It does not download a Go toolchain until a Go target is built.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

# Proto support.
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.1")

# Linting and formatting.
# aspect_rules_lint provides: buf (proto), shellcheck (shell), yamllint (yaml),
# shfmt (shell format), yamlfmt (yaml format), and the format_multirun macro.
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")

# Buildifier for Starlark/BUILD linting and formatting.
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")

# rules_multirun is needed by format_multirun.
bazel_dep(name = "rules_multirun", version = "0.10.0")

# aspect_rules_lint transitively pulls in rules_android, which registers an Android SDK
# toolchain. rules_android <=0.6.4 references @local_config_platform (removed in Bazel 9);
# 0.7.1 fixes this by loading from @platforms//host instead.
bazel_dep(name = "rules_android", version = "0.7.1")

# protoc-gen-doc: generates reference documentation from proto files.
# Pre-built Linux amd64 binary; used in the docs_site genrule.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# taplo TOML formatter/linter — hermetic linux/amd64 binary.
# Update: check https://github.com/tamasfe/taplo/releases for new versions.
http_file(
    name = "taplo_linux_amd64",
    downloaded_file_path = "taplo.gz",
    executable = False,
    sha256 = "8fe196b894ccf9072f98d4e1013a180306e17d244830b03986ee5e8eabeb6156",
    url = "https://github.com/tamasfe/taplo/releases/download/0.10.0/taplo-linux-x86_64.gz",
)

# Pre-built PostgreSQL 17 binaries for Linux x86_64 (full install: server +
# client tools including psql, pg_isready, pg_dump, …).
# Source: theseus-rs/postgresql-binaries on GitHub.
# Update by checking https://github.com/theseus-rs/postgresql-binaries/releases
# and recomputing sha256 from the matching .sha256 file.
http_file(
    name = "postgresql_linux_amd64",
    downloaded_file_path = "postgresql.tar.gz",
    sha256 = "463422cb007fd15bb37819b1d3562392dd81bba385205fbd0eef4891cb1d18b5",
    url = "https://github.com/theseus-rs/postgresql-binaries/releases/download/17.9.0/postgresql-17.9.0-x86_64-unknown-linux-gnu.tar.gz",
)

# Eclipse Temurin JRE 21 for Linux x86_64.  Used by //infra/tla to run TLC.
# Update by checking https://github.com/adoptium/temurin21-binaries/releases
# and recomputing sha256.
http_archive(
    name = "temurin_jre_linux_amd64",
    build_file_content = """
filegroup(
    name = "files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "553dda64b3b1c3c16f8afe402377ffebe64fb4a1721a46ed426a91fd18185e62",
    strip_prefix = "jdk-21.0.5+11-jre",
    url = "https://github.com/adoptium/temurin21-binaries/releases/download/jdk-21.0.5%2B11/OpenJDK21U-jre_x64_linux_hotspot_21.0.5_11.tar.gz",
)

# TLA+ tools (TLC model checker, SANY parser, etc.) bundled as a single jar.
# Update: check https://github.com/tlaplus/tlaplus/releases for new versions.
http_file(
    name = "tla2tools",
    downloaded_file_path = "tla2tools.jar",
    sha256 = "af03b2baae73b523fe162c0ff195c5adeed42cd1d092200b0bde2cd15914f624",
    url = "https://github.com/tlaplus/tlaplus/releases/download/v1.8.0/tla2tools.jar",
)

# AWS CLI 2.34.14 Linux amd64, used by //infra:aws.
# Update: download new zip, run sha256sum, update version and sha256 here.
# https://awscli.amazonaws.com/awscli-exe-linux-x86_64-VERSION.zip
http_archive(
    name = "aws_cli_linux_amd64",
    build_file_content = """
filegroup(
    name = "dist",
    srcs = glob(["dist/**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "05f820e8df6bdc2b1c296afd1b63d3fecd39ac0725fd823004f110191c8180dd",
    strip_prefix = "aws",
    url = "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.34.14.zip",
)

# OpenTofu 1.11.5 Linux amd64 binary, used by //infra:tofu.
# Update by downloading the new SHA256SUMS from the GitHub release page.
http_archive(
    name = "opentofu_linux_amd64",
    build_file_content = """exports_files(["tofu"])""",
    sha256 = "901121681e751574d739de5208cad059eddf9bd739b575745cf9e3c961b28a13",
    url = "https://github.com/opentofu/opentofu/releases/download/v1.11.5/tofu_1.11.5_linux_amd64.zip",
)

http_archive(
    name = "protoc_gen_doc",
    build_file_content = """exports_files(["protoc-gen-doc"])""",
    sha256 = "47cd72b07e6dab3408d686a65d37d3a6ab616da7d8b564b2bd2a2963a72b72fd",
    url = "https://github.com/pseudomuto/protoc-gen-doc/releases/download/v1.5.1/protoc-gen-doc_1.5.1_linux_amd64.tar.gz",
)
# ── Rust ──────────────────────────────────────────────────────────────────────

# llvm is pulled in transitively by rules_rs; declare it directly so we can
# reference @llvm//tools:llvm-cov / @llvm//tools:llvm-profdata from our own
# targets (coverage wrapper in lib/rust/api_db).
bazel_dep(name = "llvm", version = "0.7.0")
bazel_dep(name = "rules_rs", version = "0.0.58")
single_version_override(
    module_name = "rules_rs",
    patch_strip = 1,
    patches = [
        # Make rules_rs use the module-graph rules_rust (via bazel_dep) so
        # aspect_rules_lint's clippy aspect and our rust_library targets
        # share one CrateInfo provider identity.  Combined with the
        # archive_override below, rules_rs ends up pointing at the same
        # hermeticbuild/rules_rust fork it was loading via extension.
        "//build/patches:rules_rs_rules_rust_bazel_dep.patch",
    ],
)

# aspect_rules_lint's clippy aspect imports rules_rust and looks up the
# CrateInfo provider via identity.  rules_rs ships its own rules_rust fork
# (hermeticbuild/rules_rust at a pinned commit), so targets built by rules_rs
# expose a different provider than the one aspect_rules_lint loads.  Result:
# the aspect goes no-op on our targets and clippy never runs.  Override
# aspect_rules_lint's rules_rust dep with the same fork rules_rs uses, so
# there is a single shared provider identity.
bazel_dep(name = "rules_rust", version = "0.67.0")
archive_override(
    module_name = "rules_rust",
    integrity = "sha256-xT7zyL35CDK5b7iKdKL+WchslRZsnXDXuBMHiqVD0ps=",
    strip_prefix = "rules_rust-7ed8a24a37be47378b8a266ae3016148b9cb5c49",
    urls = ["https://github.com/hermeticbuild/rules_rust/archive/7ed8a24a37be47378b8a266ae3016148b9cb5c49.tar.gz"],
)

toolchains = use_extension(
    "@rules_rs//rs/experimental/toolchains:module_extension.bzl",
    "toolchains",
)
toolchains.toolchain(
    edition = "2021",
    version = "1.94.1",
)
use_repo(
    toolchains,
    "default_rust_toolchains",
)

register_toolchains("@default_rust_toolchains//:all")

# Exposes cargo/rustc/rustfmt from the hermetic toolchain as @rust_host_tools.
# Using a dedicated extension (rather than listing the versioned repos directly
# in the toolchains use_repo block) keeps 'bazel mod tidy' happy: the versioned
# repos are internal to rules_rs and not reported as direct deps.
rust_host = use_extension("//tools:rust_host_tools.bzl", "rust_host")
rust_host.config(version = "1.94.1")
use_repo(rust_host, "rust_host_tools")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    use_experimental_platforms = True,
)
use_repo(crate, "crates")

# ── Container images ───────────────────────────────────────────────────────────

bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_debian13",
    digest = "sha256:56aaf20ab2523a346a67c8e8f8e8dabe447447d0788b82284d14ad79cd5f93cc",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_cc_debian13", "distroless_cc_debian13_linux_amd64", "distroless_cc_debian13_linux_arm64")

# ── Python ────────────────────────────────────────────────────────────────────

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//.devcontainer:package.json",
        "//.devcontainer:pnpm-workspace.yaml",
    ],
    pnpm_lock = "//.devcontainer:pnpm-lock.yaml",
)
use_repo(
    npm,
    "npm",
    "npm__at_devcontainers_cli__0.84.1",
)
