load(
    "@rules_python//python/entry_points:py_console_script_binary.bzl",
    "py_console_script_binary",
)
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/lint:format_check.bzl", "format_srcs")
load("//tools/lint:linters.bzl", "yamllint_lint_test")

# Hermetically managed zensical binary.
# Run directly with: bazel run //docs:zensical -- build
py_console_script_binary(
    name = "zensical",
    pkg = "@pip//zensical",
    script = "zensical",
)

# Hermetically managed ghp-import binary for deploying to GitHub Pages.
py_console_script_binary(
    name = "ghp_import",
    pkg = "@pip//ghp_import",
    script = "ghp-import",
)

# Build the static docs site.
# Output: bazel-bin/docs/site.tar.gz
genrule(
    name = "docs_site",
    srcs = [
        "//:designdocs",
        "mkdocs.yml",
        "//proto:proto_docs",
    ],
    outs = ["site.tar.gz"],
    cmd = """
        EXECROOT=$$(pwd)
        OUTDIR=$$EXECROOT/$(@D)
        # Zensical requires the config to sit at the project root with relative paths.
        # The Bazel sandbox uses a double-symlink chain (sandbox → execroot → source).
        # Zensical silently finds 0 pages through double-symlinks, so copy files with -L
        # to dereference all symlinks and produce real files.
        mkdir $$OUTDIR/designdocs
        cp -rL $$EXECROOT/designdocs/. $$OUTDIR/designdocs/
        # Copy generated proto reference docs into the designdocs tree.
        cp $(location //proto:proto_docs) $$OUTDIR/designdocs/Proto-Reference.md
        sed -e '/^docs_dir:/d' -e '/^site_dir:/d' docs/mkdocs.yml > $$OUTDIR/mkdocs.yml
        echo "docs_dir: designdocs" >> $$OUTDIR/mkdocs.yml
        cd $$OUTDIR
        $$EXECROOT/$(location :zensical) build --clean
        # Zensical locates its theme assets via __file__ at runtime, but the Bazel
        # runfiles layout differs from a regular pip install, so it silently skips
        # the copy. Copy them manually from the tool's runfiles.
        ZENSICAL_ASSETS=$$(find $$EXECROOT/$(location :zensical).runfiles -path "*/zensical/templates/assets" -type d | head -1)
        cp -rL "$$ZENSICAL_ASSETS" $$OUTDIR/site/assets
        tar czf $$EXECROOT/$@ -C $$OUTDIR site
    """,
    tools = [":zensical"],
)

# Start the Zensical dev server with live reload.
# Run with: bazel run //docs:serve_docs  →  browse http://localhost:8000
sh_binary(
    name = "serve_docs",
    srcs = ["serve_docs.sh"],
    data = [
        "mkdocs.yml",
        "site_builder.bash",
        ":zensical",
        "//proto:proto_docs",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Deploy docs to GitHub Pages.
# Run with: bazel run //docs:deploy_docs
sh_binary(
    name = "deploy_docs",
    srcs = ["deploy_docs.sh"],
    data = [
        "mkdocs.yml",
        "site_builder.bash",
        ":ghp_import",
        ":zensical",
        "//:designdocs",
        "//proto:proto_docs",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# End-to-end test: build the site then serve it over HTTP and fetch pages.
# Run with: bazel test //docs:serve_test
sh_test(
    name = "serve_test",
    srcs = ["serve_test.sh"],
    data = [
        ":serve_docs",
        "//:designdocs",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

filegroup(
    name = "yaml_srcs",
    srcs = ["mkdocs.yml"],
    tags = ["lint-with-yamllint"],
)

yamllint_lint_test(
    name = "yamllint",
    srcs = [":yaml_srcs"],
)

# Smoke-test the docs build. Run with: bazel test //docs:docs_test
sh_test(
    name = "docs_test",
    srcs = ["docs_test.sh"],
    data = [
        "mkdocs.yml",
        "site_builder.bash",
        ":zensical",
        "//:designdocs",
        "//proto:proto_docs",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

format_srcs()
