load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//tools/lint:linters.bzl", "markdown_lint_test")

# Run the AWS CLI.
# Usage: bazel run //infra:aws -- sts get-caller-identity
#        bazel run //infra:aws -- s3 ls
sh_binary(
    name = "aws",
    srcs = ["aws.sh"],
    data = [
        "@aws_cli_linux_amd64//:dist",
        "@bazel_tools//tools/bash/runfiles",
    ],
)

# Run OpenTofu from the infra/terraform directory.
# Usage: bazel run //infra:tofu -- init
#        bazel run //infra:tofu -- plan
#        bazel run //infra:tofu -- apply
sh_binary(
    name = "tofu",
    srcs = ["tofu.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@opentofu_linux_amd64//:tofu",
    ],
)

# Build, upload, and deploy the causes-api container image in one step.
# Usage: bazel run //infra:deploy
sh_binary(
    name = "deploy",
    srcs = ["deploy.sh"],
)

markdown_lint_test(
    name = "pymarkdown",
    srcs = ["terraform/README.md"],
)
