load("@rules_proto//proto:defs.bzl", "proto_library")
load("//tools/lint:linters.bzl", "buf_lint_test", "yamllint_lint_test")

exports_files(["buf.yaml"])

filegroup(
    name = "yaml_srcs",
    srcs = ["buf.yaml"],
    tags = ["lint-with-yamllint"],
)

yamllint_lint_test(
    name = "yamllint",
    srcs = [":yaml_srcs"],
)

proto_library(
    name = "causes_v1_proto",
    srcs = glob(["causes/v1/*.proto"]),
    strip_import_prefix = "",
    visibility = ["//visibility:public"],
    deps = ["@protobuf//:timestamp_proto"],
)

# Run with: bazel test //proto:buf_lint
buf_lint_test(
    name = "buf_lint",
    srcs = [":causes_v1_proto"],
)

# Generate Markdown reference documentation from the proto definitions.
# Output: bazel-bin/proto/proto_docs.md — consumed by //docs:docs_site.
# protoc-gen-doc is a pre-built Linux amd64 binary (see MODULE.bazel).
# Convenience filegroup for the .proto sources used by the docs genrule.
filegroup(
    name = "proto_srcs",
    srcs = glob(["causes/v1/*.proto"]),
    visibility = ["//docs:__pkg__"],
)

# Generate Markdown reference documentation from the proto definitions.
# Output: bazel-bin/proto/proto_docs.md — consumed by //docs:docs_site.
# protoc-gen-doc is a pre-built Linux amd64 binary (see MODULE.bazel).
genrule(
    name = "proto_docs",
    srcs = [
        ":proto_srcs",
        "@protobuf//:well_known_type_protos",
    ],
    outs = ["proto_docs.md"],
    cmd = """
        EXECROOT=$$(pwd)
        WKT_DIR=$$(dirname $$(echo '$(locations @protobuf//:well_known_type_protos)' | tr ' ' '\\n' | head -1))
        WKT_ROOT=$$(echo "$$WKT_DIR" | sed 's|/google/protobuf$$||')
        PROTO_FILES=$$(echo '$(locations :proto_srcs)' | tr ' ' '\\n' | sed "s|^|$$EXECROOT/|" | tr '\\n' ' ')
        $(location @protobuf//:protoc) \
            --plugin=protoc-gen-doc=$(location @protoc_gen_doc//:protoc-gen-doc) \
            --doc_out=$$EXECROOT/$(@D) \
            --doc_opt=markdown,proto_docs.md \
            --proto_path=$$EXECROOT/proto \
            --proto_path=$$EXECROOT/$$WKT_ROOT \
            $$PROTO_FILES
    """,
    tools = [
        "@protobuf//:protoc",
        "@protoc_gen_doc//:protoc-gen-doc",
    ],
    visibility = ["//docs:__pkg__"],
)
