load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Run the hermetic cargo binary from the rules_rs toolchain.
# RUSTC is set to the hermetic rustc so that cargo subcommands that
# probe the toolchain (e.g. fetch, metadata) work without a host rustc
# on PATH.
#   bazel run //tools:cargo -- generate-lockfile
#   bazel run //tools:cargo -- fetch
#   bazel run //tools:cargo -- metadata
#   bazel run //tools:cargo -- tree
# For compilation (check/build/test) use: bazel build //services/...
sh_binary(
    name = "cargo",
    srcs = ["cargo.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:cargo",
        "@rust_host_tools//:rustc",
    ],
)

# Run the hermetic rustc binary from the rules_rs toolchain.
# Usage: bazel run //tools:rustc -- --version
sh_binary(
    name = "rustc",
    srcs = ["rustc.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:rustc",
    ],
)

# Run the hermetic rustfmt binary from the rules_rs toolchain.
# Usage: bazel run //tools:rustfmt -- --check services/causes_api/src/main.rs
#        bazel run //tools:rustfmt -- services/causes_api/src/main.rs
sh_binary(
    name = "rustfmt",
    srcs = ["rustfmt.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:rustfmt",
    ],
)

# Verify all three wrappers resolve and report the expected toolchain version.
# Run with: bazel test //tools:toolchain_versions_test
sh_test(
    name = "toolchain_versions_test",
    srcs = ["toolchain_versions_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "@rust_host_tools//:cargo",
        "@rust_host_tools//:rustc",
        "@rust_host_tools//:rustfmt",
    ],
)
